fix :openapiで multimodal周りで無駄な箇所を修正
